style: 3header style prototype

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,19 +1,39 @@
+:root {
+  --base--space: 0.4rem;
+}
 .header {
   display: flex;
   font-size: 2rem;
+  color: white;
   justify-content: center;
   align-items: center;
+  background-color: black;
+  padding: var(--base--space);
+}
+
+.header__name {
+  padding-left: var(--base--space);
 }
 
 .search-form {
   display: flex;
   align-items: center;
+  padding-left: var(--base--space);
 }
 
-.search__input {
+.search-form__input {
   width: 50vw;
+  height: 1.8rem;
+  font-size: 1rem;
 }
 
-.search__img {
-  width: 1.5rem;
+.search-form__button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding-left: var(--base--space);
+}
+
+.search-form__img {
+  width: 1.6rem;
 }
