style: Design Videos for dev

--- a/src/styles/Video.module.css
+++ b/src/styles/Video.module.css
@@ -2,9 +2,23 @@
   /* row당 Video 4개씩 */
   /* Three values: flex-grow | flex-shrink | flex-basis */
   flex: 1 0 21%;
-  margin: 5px;
-  height: 100px;
-  background-color: gray;
+  margin: 0.5rem;
+  height: 25%;
+  background-color: blue;
   display: flex;
-  border: 1px solid;
+  flex-wrap: wrap;
+  border: 1px solid red;
+}
+
+.video__thumbnails {
+  width: 100%;
+}
+
+.video__title {
+  display: block;
+  color: white;
+}
+
+.video__channelTitle {
+  color: gray;
 }
