style(VideoListItem): thumbnail과 metadata 비율을 50:50으로 수정

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -10,7 +10,7 @@
   color: white;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #222121;
   padding: var(--base--space);
 }
 
