--- a/src/styles/VideoListItem.module.css
+++ b/src/styles/VideoListItem.module.css
@@ -3,6 +3,10 @@
   margin-bottom: 0.5rem;
   cursor: pointer;
 }
+.video:hover {
+  transform: scale(1.1);
+  transition: transform 300ms;
+}
 
 ​.video__thumbnails {
 }
