--- a/src/styles/Video.module.css
+++ b/src/styles/Video.module.css
@@ -4,10 +4,13 @@
   flex: 1 0 21%;
   margin: 0.5rem;
   height: 25%;
-  background-color: blue;
   display: flex;
   flex-wrap: wrap;
-  border: 1px solid red;
+  cursor: pointer;
+}
+.video:hover {
+  transform: scale(1.1);
+  transition: transform 300ms;
 }
 
 .video__thumbnails {
