refactor(: 코드가 동일하고 css만 달랐던 컴포넌트들을 삭제, 기능이 같던 기존의 컴포넌트의 스타일을 수정

--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -1,16 +1,23 @@
-.video {
+/* 검색, 첫화면 비디오 목록*/
+.video.grid {
   /* row당 Video 4개씩 */
   /* Three values: flex-grow | flex-shrink | flex-basis */
   /* flex: 1 0 21%; */
   width: 23%;
   margin: 0.5rem;
   height: 25%;
-  display: flex;
-  flex-wrap: wrap;
   cursor: pointer;
 }
+/* 비디오 재생시 비디오 목록 */
+.video.list {
+  width: 100%;
+  margin: 1.5rem;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
 .video:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   transition: transform 300ms;
 }
 
