feat: media query를 이용해 브라우저가 좁아지면 video list를 video 밑으로 배치

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,11 @@
   display: flex;
   background-color: black;
 }
-
+@media screen and (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
+}
 .video-detail {
   flex: 1 1 70%;
 }
