--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,15 +2,21 @@
   display: flex;
   background-color: black;
 }
-@media screen and (max-width: 768px) {
-  .content {
-    flex-direction: column;
-  }
-}
+
 .video-detail {
   flex: 1 1 70%;
 }
 
 .video-list {
   flex: 1 1 30%;
+  padding-top: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    flex-direction: column;
+  }
+  .video-list {
+    padding-top: 0px;
+  }
 }
