--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -10,9 +10,9 @@
 }
 /* 비디오 재생시 비디오 목록 */
 .video.list {
+  display: flex;
   width: 100%;
-  margin: 1.5rem;
-  padding: 0.5rem;
+  margin: 0.5rem;
   cursor: pointer;
 }
 
@@ -21,9 +21,20 @@
   transition: transform 300ms;
 }
 
-.video__thumbnails {
+.video__thumbnails.grid {
   width: 100%;
   padding-bottom: 0.5rem;
+}
+
+.video__thumbnails.list {
+  width: 35%;
+}
+
+.video__metadata.list {
+  padding-left: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .video__title {
