--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,7 +13,11 @@
   background-color: #222121;
   padding: var(--base--space);
 }
-
+.header__logoContainer {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
 .header__name {
   padding-left: var(--base--space);
 }
